--- a/index.html
+++ b/index.html
@@ -134,15 +134,46 @@
         </div>
     </div>
 
+    <h2 class="jumbotron-heading" style="text-align: center; margin-top: 40px;">Assista nossos Vídeos</h2>
     <section class="jumbotron text-center corPrimaria" id="video">
-        <div class="container">
-            <h2 class="jumbotron-heading ">Assista nossos Vídeos</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-           
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SKdMZj8f6Bc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ebMQ_4qM_bI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/IHLLYeFc5sg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <div class="container"> 
+            <div class="row" >
+                <div class="col-md-6">
+        <div class="video-wrap">
+        <div class="iframe-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gJwg46ioXM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         </div>
         </div>
+    </div>
+    <div class="col-md-6">
+        <div class="video-wrap">
+            <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2Cibm9iXjH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
+            </div></div>
+        </div></div>
+
+
+
+
+<div class="container"> 
+    <div class="row" >
+        <div class="col-md-6">
+<div class="video-wrap">
+<div class="iframe-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2Cibm9iXjH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ </div>
+</div>
+</div>
+<div class="col-md-6">
+<div class="video-wrap">
+    <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gJwg46ioXM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+    </div></div>
+</div></div>
+        
     </section>
 
     <section class="jumbotron text-center corPrimaria" id="equipe">
