--- a/index.html
+++ b/index.html
@@ -139,40 +139,44 @@
 
         <div class="container"> 
             <div class="row" >
-                <div class="col-md-6">
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
         <div class="video-wrap">
         <div class="iframe-container">
             <iframe width="300" height="250" src="https://www.youtube.com/embed/gJwg46ioXM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
          </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="video-wrap">
             <div class="iframe-container">
                 <iframe width="300" height="250" src="https://www.youtube.com/embed/2Cibm9iXjH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
              </div>
             </div></div>
+            <div class="col-md-2"></div>
         </div></div>
 
 
 
 
-<div class="container"> 
-    <div class="row" >
-        <div class="col-md-6">
-<div class="video-wrap">
-<div class="iframe-container">
-    <iframe width="300" height="250" src="https://www.youtube.com/embed/2Cibm9iXjH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
- </div>
-</div>
-</div>
-<div class="col-md-6">
-<div class="video-wrap">
-    <div class="iframe-container">
-        <iframe width="300" height="250" src="https://www.youtube.com/embed/gJwg46ioXM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
-    </div></div>
-</div></div>
+        <div class="container" style="margin-top: 20px;"> 
+            <div class="row" >
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
+        <div class="video-wrap">
+        <div class="iframe-container">
+            <iframe width="300" height="250" src="https://www.youtube.com/embed/gJwg46ioXM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="video-wrap">
+            <div class="iframe-container">
+                <iframe width="300" height="250" src="https://www.youtube.com/embed/2Cibm9iXjH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
+            </div></div>
+            <div class="col-md-2"></div>
+        </div></div>
         
     </section>
 
