--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
 
-        <div class="container" style="margin-top: 20px;"> 
+        <div class="container"> 
             <div class="row" >
                 <div class="col-md-2"></div>
                 <div class="col-md-4">
