--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
 
 <body>
     <div style="background-color: rgb(63, 172, 87);" id="topo">
-        <p style="margin-bottom: 0px;">Change Language: English, Chinese, Khmer</p></div>
         
+        <p style="margin-bottom: 0px;">
+            <span>Change Language: English, Chinese, Khmer</span>
+            <span ><i class="fa-solid fa-sun"></i><i class="fa-solid fa-moon"></i></span>
+     </p>
     <header>
-        <div class="container" >
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8"></div>
-        <source srcset="images/logo1.jpg" type="image/jpg">
-        <img src="images/logo1.jpg" type="image/jpg" alt="logo1">
 
-        <div class="col-md-2"></div>
     </div></div>
     </div>
     </header>
