--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
     <div style="background-color: rgb(63, 172, 87);" id="topo">
         
-        <p style="margin-bottom: 0px;">
-            <span>Change Language: English, Chinese, Khmer</span>
-            <span ><i class="fa-solid fa-sun"></i><i class="fa-solid fa-moon"></i></span>
+        <p style="margin-bottom: 0px; display:inline">
+            <span>Language: English, Chinese, Khmer</span>
+            <span style="margin-left:7px;">Dia <i class="fa-solid fa-sun"></i> Noite <i class="fa-solid fa-moon" ></i></span>
      </p>
     <header>
 
