--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div style="background-color: rgb(63, 172, 87);" id="topo">
         
         <p style="margin-bottom: 0px; display:inline">
-            <span>Language: English, Chinese, Khmer</span>
-            <span style="margin-left:7px;">Dia <i class="fa-solid fa-sun"></i> Noite <i class="fa-solid fa-moon" ></i></span>
+            <span style="margin-right:10px;">English</span> <span style="margin-right:10px;">Chinese</span> <span style="margin-right:10px;">Khmer</span>
+            <span style="margin-left:40px;">Dia<i class="fa-solid fa-sun" style="margin-right:15px;"></i> Noite<i class="fa-solid fa-moon" ></i></span>
      </p>
     <header>
 
