--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
      </p>
     </div>
     <header>
+        <div class="container" >
+            <div class="row">
+
+                <div class="col-md-12"></div>
+                <div class="image-wrap">
+        <source srcset="images/logo1.jpg" type="image/jpg">
+        <img src="images/logo1.jpg" type="image/jpg" alt="logo1">
+    </div>
 
     
     </header>
