--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
 <body>
     <div style="background-color: rgb(63, 172, 87);" id="topo">
         
-        <p style="margin-bottom: 0px; display:inline">
+        <p style="margin-bottom: 0px; display:inline" id="mynav2">
             <span style="margin-right:10px;">English</span> <span style="margin-right:10px;">Chinese</span> <span style="margin-right:10px;">Khmer</span>
-            <span style="margin-left:40px;">Dia<i class="fa-solid fa-sun" style="margin-right:15px;"></i> Noite<i class="fa-solid fa-moon" ></i></span>
+            <span style="margin-left:35px;" onclick="changeScr()" >Escuro</span>
+            <span style="margin-left:35px;" onclick="changeScr2()" >Claro</span>
      </p>
     </div>
-    <header>
+    <header id="myHeader">
         <div class="container" >
             <div class="row">
 
                 <div class="col-md-12"></div>
                 <div class="image-wrap">
         <source srcset="images/logo1.jpg" type="image/jpg">
-        <img src="images/logo1.jpg" type="image/jpg" alt="logo1">
+        <img id="imgid" src="images/logo1.jpg" type="image/jpg" alt="logo1">
     </div>
 
     
     </header>
 
-    <nav>
+    <nav id="mynav">
         <a href="#produto">Produtos</a>
         <a href="#video">Vídeos</a>
         <a href="#equipe">Equipe</a>
@@ -285,3 +286,4 @@
 </body>
 
 </html>
+<script src="index.js"> </script>
