--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <article>
     <div class="album py-2" id="farm" style="background-color: rgba(0, 104, 73,40%); padding-bottom: 10px;">
-        <div class="container" style="padding-bottom: 40px">
+        <div class="container" style="padding-bottom: 5px">
             <h2 class="jumbotron-heading text-center" style="margin-top: 20px; margin-bottom: 15px;">Know the Farm</h2>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4">
@@ -82,25 +82,23 @@
 
     <article style="background-color: rgba(0, 104, 73,20%)">
     <h2 style="text-align: center; padding-top: 20px" id="product">Pineapple</h2>
-    <div class="image-wrap" style="padding-bottom: 40px">
+    <div class="image-wrap" style="padding-bottom: 15px">
         <div class="card shadow-sm">
             <img src="ezgif.com-gif-maker.gif" alt="Pineapple" style="max-height:472px">
             <div class="card-body">
-                <p class="card-text">Daylight Photography of the Plantation</p>
+                <p class="card-text">Set of photos showing a pineapple from the farm growing</p>
             </div>
         </div>
     </div>
 </article>
 
 <article style="background-color: rgba(0, 104, 73,40%)">
-    <h2 class="jumbotron-heading" style="text-align: center; padding-top: 40px;" id="video">Watch our Content</h2>
-    <section class="jumbotron text-center corPrimaria" >
-
+    <h2  style="text-align: center; padding-top: 20px; margin-bottom: -10px;" id="video">Watch our Content</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <div class="video-wrap" style="padding-bottom: 40px">
+                    <div class="video-wrap" style="padding-bottom: 15px">
                         <div class="iframe-container">
                             <iframe width="600" height="450" src="https://www.youtube.com/embed/bieQ3dLEzgc"
                                 title="YouTube video player" frameborder="0"
@@ -112,13 +110,11 @@
                 <div class="col-md-1"></div>
             </div>
         </div>
-
-    </section>
 </article>
 
     <article style="background-color: rgba(0, 104, 73,20%)">
-    <h2 style="text-align: center; padding-top: 40px" id="team">Know our team</h2>
-    <div class="image-wrap" style="padding-bottom: 40px">
+    <h2 style="text-align: center; padding-top: 20px" id="team">Know our team</h2>
+    <div class="image-wrap" style="padding-bottom: 15px">
         <div class="card shadow-sm">
             <img src="images/pessoa2.png" alt="Pineapple" style="max-height:300px">
             <div class="card-body" >
@@ -130,24 +126,24 @@
 
 
 
-    <article id="contact" style="background-color: rgba(0, 104, 73, 40%)">
-        <div class="container-fluid" style="padding-top: 40px;">
-            <h2 style="margin-bottom: 20px" class="text-center">Contact Information </h2>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Opening hours: Monday to Friday, 8AM to 5PM</p>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Sangkat Tonle Bassac 3/F., G-06 &
+    <article  style="background-color: rgba(0, 104, 73, 40%)">
+        <div class="container-fluid" style="padding-top: 20px;">
+            <h2 style="margin-bottom: 20px" class="text-center" id="contact">Contact Information </h2>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Sangkat Tonle Bassac 3/F., G-06 &
                 G-08, Street Galileo, Elite Town</p>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Koh Pich, Sangkat Tonle Bassac, Khan
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Koh Pich, Sangkat Tonle Bassac, Khan
                 Charmkamorn</p>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Phnom Penh, Kingdom of Cambodia.
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Phnom Penh, Kingdom of Cambodia.
                 Postal Code: 120101</p>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Email: <a
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Email: <a
                     href="mailto:seuemail@hotmail.com">altculturefarm@gmail.com <i class="fa-solid fa-envelope"></i></a></p>
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Phone: +855 888 112 118 </p>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Phone: +855 888 112 118 </p>
 
-            <p style="padding-bottom:20px;margin-bottom: 0px" class="text-center">Social Media: <a
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Social Media: <a
                     href="https://www.instagram.com/altculturefarm/?igshid=ZDdkNTZiNTM%3D" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a> <a href="https://www.youtube.com/@altculturefarm/videos"
                     target="_blank"><i class="fa-brands fa-youtube"></i></a> </p>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Opening hours: Monday to Friday, 8AM to 5PM</p>
         </div>
     </article>
 
