--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <a href="#contact" id="nav5">Contacts</a>
     </nav>
 
-
+    <main>
 <article>
-    <div class="album py-2"  style="background-color: rgba(0, 104, 73,40%); padding-bottom: 10px;">
+    <div class="album py-2"  style="background-color: rgba(0, 104, 73,20%); padding-bottom: 10px;">
         <div class="container" style="padding-bottom: 5px">
-            <h2 class="jumbotron-heading text-center" style="margin-top: 20px; margin-bottom: 15px;" id="farm">Know the Farm</h2>
+            <h2 class="jumbotron-heading text-center" style="margin-top: 20px; margin-bottom: 15px;" id="farm">KNOW THE FARM</h2>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card shadow-sm">
@@ -79,8 +79,8 @@
     </div>
 </article>
 
-    <article style="background-color: rgba(0, 104, 73,20%)">
-    <h2 style="text-align: center; padding-top: 20px" id="product">Pineapple</h2>
+    <article style="background-color: white">
+    <h2 style="text-align: center; padding-top: 20px" id="product">PINEAPPLE</h2>
     <div class="image-wrap" style="padding-bottom: 15px">
         <div class="card shadow-sm">
             <img src="ezgif.com-gif-maker.gif" alt="Pineapple" style="max-height:472px">
@@ -91,8 +91,8 @@
     </div>
 </article>
 
-<article style="background-color: rgba(0, 104, 73,40%)">
-    <h2  style="text-align: center; padding-top: 20px; margin-bottom: -10px;" id="video">Watch our Content</h2>
+<article style="background-color: rgba(0, 104, 73,20%)">
+    <h2  style="text-align: center; padding-top: 20px; margin-bottom: -10px;" id="video">WATCH OUR CONTENT</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-1"></div>
@@ -111,8 +111,8 @@
         </div>
 </article>
 
-    <article style="background-color: rgba(0, 104, 73,20%)">
-    <h2 style="text-align: center; padding-top: 20px" id="team">Know our team</h2>
+    <article style="background-color: white">
+    <h2 style="text-align: center; padding-top: 20px" id="team">MEET OUR TEAM</h2>
     <div class="image-wrap" style="padding-bottom: 15px">
         <div class="card shadow-sm">
             <img src="images/pessoa2.png" alt="Pineapple" style="max-height:300px">
@@ -125,9 +125,9 @@
 
 
 
-    <article  style="background-color: rgba(0, 104, 73, 40%)">
+    <article  style="background-color: rgba(0, 104, 73, 20%)">
         <div class="container-fluid" style="padding-top: 20px;">
-            <h2 style="margin-bottom: 20px" class="text-center" id="contact">Contact Information </h2>
+            <h2 style="margin-bottom: 20px" class="text-center" id="contact">CONTACT INFORMATION </h2>
             <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Sangkat Tonle Bassac 3/F., G-06 &
                 G-08, Street Galileo, Elite Town</p>
             <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Koh Pich, Sangkat Tonle Bassac, Khan
@@ -145,7 +145,7 @@
             <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Opening hours: Monday to Friday, 8AM to 5PM</p>
         </div>
     </article>
-
+</main>
     <footer>
         <p style="margin-bottom: 0px" ;><a href="#topo" style="color:white !important">Alt Culture Farm</a></p>
         <p style="margin-top: 0px; margin-bottom: 0px"><a href="#product" style="color:white !important">Pineapple</a> <a
