--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <div class="col">
                     <div class="card shadow-sm">
                         <source media="(max-height: 300px)" srcset="images/maca.jpg" type="image/jpg">
-                        <img src="images/farm1.jpg" type="image/jpg" alt="maca">
+                        <img id="imagem" src="images/farm1.jpg" type="image/jpg" alt="maca" >
 
-                        <div class="card-body">
+                        <div class="card-body" >
                             <p class="card-text" style="text-align: center;" id="txtimg1">Photography of the Plantation</p>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
         <div class="card shadow-sm">
             <img src="ezgif.com-gif-maker.gif" alt="Pineapple" style="max-height:472px">
             <div class="card-body">
-                <p class="card-text">Set of photos showing a pineapple from the farm growing</p>
+                <p class="card-text" id="txtimg3" style="text-align: center;">Set of photos showing a pineapple growing</p>
             </div>
         </div>
     </div>
@@ -142,9 +142,9 @@
     <h2 style="text-align: center; padding-top: 20px" id="team">MEET OUR TEAM</h2>
     <div class="image-wrap" style="padding-bottom: 15px">
         <div class="card shadow-sm">
-            <img src="images/pessoa2.png" alt="Pineapple" style="max-height:300px">
+            <img src="images/team-g92e393582_640.jpg" alt="Pineapple" style="max-height:300px">
             <div class="card-body" >
-                <p class="card-text" style="text-align: center;">Photo of the team</p>
+                <p class="card-text" style="text-align: center;" id="txtimg4">Photo of the team</p>
             </div>
         </div>
     </div>
@@ -155,30 +155,26 @@
     <article  style="background-color: rgba(0, 104, 73, 20%)">
         <div class="container-fluid" style="padding-top: 20px;">
             <h2 style="margin-bottom: 20px" class="text-center" id="contact">CONTACT INFORMATION </h2>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Sangkat Tonle Bassac 3/F., G-06 &
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact2">Sangkat Tonle Bassac 3/F., G-06 &
                 G-08, Street Galileo, Elite Town</p>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Koh Pich, Sangkat Tonle Bassac, Khan
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact3">Koh Pich, Sangkat Tonle Bassac, Khan
                 Charmkamorn</p>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Phnom Penh, Kingdom of Cambodia.
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact4">Phnom Penh, Kingdom of Cambodia.
                 Postal Code: 120101</p>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Email: 
-                <a href="mailto:seuemail@hotmail.com">altculturefarm@gmail.com <i class="fa-solid fa-envelope"></i></a>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact5">Email: altculturefarm@gmail.com
             </p>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Phone: +855 888 112 118 </p>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact6">Phone: +855 888 112 118 </p>
 
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Social Media:
-                <a href="https://www.instagram.com/altculturefarm/?igshid=ZDdkNTZiNTM%3D" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.youtube.com/@altculturefarm/videos" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-            </p>
-            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center">Opening hours: Monday to Friday, 8AM to 5PM</p>
+            <p style="padding-bottom:10px;margin-bottom: 0px" class="text-center" id="contact7">Opening hours: Monday to Friday, 8AM to 5PM</p>
         </div>
     </article>
 </main>
     <footer>
         <p style="margin-bottom: 0px" ;><a href="#topo" style="color:white !important">Alt Culture Farm</a></p>
-        <p style="margin-top: 0px; margin-bottom: 0px"><a href="#product" style="color:white !important">Pineapple</a> <a
-                href="#video" style="color:white !important">Media</a> <a href="#team"
-                style="color:white !important">Team</a> <a href="#contact" style="color:white !important">Contacts</a>
+        <p style="margin-top: 0px; margin-bottom: 0px"><a href="#product" style="color:white !important" id="footer1">Pineapple</a> 
+            <a href="#video" style="color:white !important" id="footer2">Media</a> 
+            <a href="#team"  style="color:white !important" id="footer3">Team</a> 
+            <a href="#contact" style="color:white !important" id="footer4">Contacts</a>
         </p>
     </footer>
 </body>
