--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
 </main>
     <footer>
         <p style="margin-bottom: 0px" ;><a href="#topo" style="color:white !important">Alt Culture Farm</a></p>
-        <p style="margin-top: 0px; margin-bottom: 0px"><a href="#product" style="color:white !important" id="footer1">Pineapple</a> 
-            <a href="#video" style="color:white !important" id="footer2">Media</a> 
-            <a href="#team"  style="color:white !important" id="footer3">Team</a> 
-            <a href="#contact" style="color:white !important" id="footer4">Contacts</a>
+        <p style="margin-top: 0px; margin-bottom: 0px"><a href="#farm" style="color:white !important" id="footer1">Farm</a> 
+            <a href="#product" style="color:white !important" id="footer2">Pineapple</a> 
+            <a href="#video" style="color:white !important" id="footer3">Media</a> 
+            <a href="#team"  style="color:white !important" id="footer4">Team</a> 
+            <a href="#contact" style="color:white !important" id="footer5">Contacts</a>
         </p>
     </footer>
 </body>
